--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -22,56 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas-profiling\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b9/94/ef8ef4517540d13406fcc0b8adfd75336e014242c69bd4162ab46931f36a/pandas_profiling-2.8.0-py2.py3-none-any.whl (259kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 266kB 11.9MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting requests>=2.23.0 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/45/1e/0c169c6a5381e241ba7404532c16a21d86ab872c9bed8bdcd4c423954103/requests-2.24.0-py2.py3-none-any.whl (61kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 15.9MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting astropy>=4.0 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/da/c2/07b8244febf380f8fe43d87ab906bfff70221ba095df3fe85cf89957c63d/astropy-4.0.1.post1-cp36-cp36m-manylinux1_x86_64.whl (6.5MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 6.5MB 4.5MB/s eta 0:00:01   9% |███                             | 604kB 15.4MB/s eta 0:00:01    95% |██████████████████████████████▍ | 6.2MB 19.7MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting jinja2>=2.11.1 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/30/9e/f663a2aa66a09d838042ae1a2c5659828bb9b41ea3a6efa20a20fd92b121/Jinja2-2.11.2-py2.py3-none-any.whl (125kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 133kB 18.5MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting htmlmin>=0.1.12 (from pandas-profiling)\n",
-      "  Downloading https://files.pythonhosted.org/packages/b3/e7/fcd59e12169de19f0131ff2812077f964c6b960e7c09804d30a7bf2ab461/htmlmin-0.1.12.tar.gz\n",
-      "Collecting tangled-up-in-unicode>=0.0.6 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4a/e2/e588ab9298d4989ce7fdb2b97d18aac878d99dbdc379a4476a09d9271b68/tangled_up_in_unicode-0.0.6-py3-none-any.whl (3.1MB)\n",
-      "\u001b[K    99% |████████████████████████████████| 3.1MB 18.7MB/s eta 0:00:01    17% |█████▊                          | 563kB 17.4MB/s eta 0:00:01    45% |██████████████▋                 | 1.4MB 18.0MB/s eta 0:00:01    100% |████████████████████████████████| 3.1MB 8.2MB/s \n",
-      "\u001b[?25hCollecting tqdm>=4.43.0 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f3/76/4697ce203a3d42b2ead61127b35e5fcc26bba9a35c03b32a2bd342a4c869/tqdm-4.46.1-py2.py3-none-any.whl (63kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 13.8MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting confuse>=1.0.0 (from pandas-profiling)\n",
-      "  Downloading https://files.pythonhosted.org/packages/f7/64/85dbcea372efee5cba13eaa10a3bfa7019b8fe0c3c8314d8e189116e477a/confuse-1.1.0.tar.gz\n",
-      "Collecting pandas!=1.0.0,!=1.0.1,!=1.0.2,>=0.25.3 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c0/95/cb9820560a2713384ef49060b0087dfa2591c6db6f240215c2bce1f4211c/pandas-1.0.5-cp36-cp36m-manylinux1_x86_64.whl (10.1MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 10.1MB 3.1MB/s eta 0:00:01   50% |████████████████▏               | 5.1MB 21.1MB/s eta 0:00:01    86% |███████████████████████████▋    | 8.7MB 17.5MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting missingno>=0.4.2 (from pandas-profiling)\n",
-      "  Downloading https://files.pythonhosted.org/packages/2b/de/6e4dd6d720c49939544352155dc06a08c9f7e4271aa631a559dfbeaaf9d4/missingno-0.4.2-py3-none-any.whl\n",
-      "Collecting matplotlib>=3.2.0 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e3/a8/bfd8e9ddac55a4a80235f7ccc286e4a08c97e6c4f035f21a27bcab7a51c8/matplotlib-3.2.2-cp36-cp36m-manylinux1_x86_64.whl (12.4MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 12.4MB 2.2MB/s eta 0:00:01  3% |█                               | 430kB 16.5MB/s eta 0:00:01    10% |███▌                            | 1.4MB 17.2MB/s eta 0:00:01    17% |█████▊                          | 2.2MB 17.1MB/s eta 0:00:01    33% |██████████▋                     | 4.1MB 17.3MB/s eta 0:00:01    47% |███████████████                 | 5.9MB 17.8MB/s eta 0:00:01    61% |███████████████████▋            | 7.6MB 17.9MB/s eta 0:00:01    89% |████████████████████████████▋   | 11.1MB 17.7MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting visions[type_image_path]==0.4.4 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4a/03/5a45d542257830cf1d9da2cdc1c0bc6f55a9212937b70fdd6d7031b46d6c/visions-0.4.4-py3-none-any.whl (59kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 7.4MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting scipy>=1.4.1 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dc/29/162476fd44203116e7980cfbd9352eef9db37c49445d1fec35509022f6aa/scipy-1.4.1-cp36-cp36m-manylinux1_x86_64.whl (26.1MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 26.1MB 1.3MB/s eta 0:00:01  2% |▋                               | 522kB 17.8MB/s eta 0:00:02    5% |█▊                              | 1.4MB 16.5MB/s eta 0:00:02    8% |██▊                             | 2.2MB 18.1MB/s eta 0:00:02    22% |███████▎                        | 5.9MB 18.7MB/s eta 0:00:02    29% |█████████▍                      | 7.7MB 16.4MB/s eta 0:00:02    32% |██████████▌                     | 8.5MB 17.2MB/s eta 0:00:02    36% |███████████▋                    | 9.4MB 16.9MB/s eta 0:00:01    39% |████████████▋                   | 10.3MB 13.6MB/s eta 0:00:02    42% |█████████████▊                  | 11.1MB 12.2MB/s eta 0:00:02    45% |██████████████▊                 | 12.0MB 18.0MB/s eta 0:00:01    52% |████████████████▊               | 13.6MB 17.4MB/s eta 0:00:01    55% |█████████████████▊              | 14.5MB 18.2MB/s eta 0:00:01    58% |██████████████████▉             | 15.3MB 22.2MB/s eta 0:00:01    68% |██████████████████████          | 17.9MB 15.0MB/s eta 0:00:01    71% |███████████████████████         | 18.7MB 19.6MB/s eta 0:00:01    74% |████████████████████████        | 19.5MB 15.8MB/s eta 0:00:01    80% |█████████████████████████▉      | 21.0MB 9.8MB/s eta 0:00:01    83% |██████████████████████████▉     | 21.8MB 15.9MB/s eta 0:00:01    89% |████████████████████████████▊   | 23.4MB 17.1MB/s eta 0:00:01    94% |██████████████████████████████▏ | 24.6MB 15.9MB/s eta 0:00:01    97% |███████████████████████████████▏| 25.4MB 17.6MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting phik>=0.9.10 (from pandas-profiling)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/01/5a/7ef1c04ce62cd72f900c06298dc2385840550d5c653a0dbc19109a5477e6/phik-0.10.0-py3-none-any.whl (599kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 604kB 16.8MB/s ta 0:00:01    68% |█████████████████████▉          | 409kB 21.2MB/s eta 0:00:01\n",
-      "^C\n",
-      "\u001b[31mOperation cancelled by user\u001b[0m\n"
-     ]
-    },
     {
      "ename": "ModuleNotFoundError",
      "evalue": "No module named 'pandas_profiling'",
@@ -79,14 +32,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-23fbbd994363>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpandas_profiling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mProfileReport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-3b3eb1c9c0f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpandas_profiling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mProfileReport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas_profiling'"
      ]
     }
    ],
    "source": [
     "# import libraries\n",
-    "! pip install pandas-profiling\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -102,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mini_sparkify_event_data.json  Sparkify.ipynb  Sparkify-zh.ipynb\r\n"
+      "mini_sparkify_event_data.json  Sparkify.ipynb  Sparkify-zh.ipynb\n"
      ]
     }
    ],
@@ -556,9 +508,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
