--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -22,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries\n",
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -35,25 +36,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "README.md                     mini_sparkify_event_data.json\n",
-      "Sparkify.ipynb\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['README.md',\n",
+       " 'mini_sparkify_event_data.json',\n",
+       " 'Sparkify.ipynb',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " '.git',\n",
+       " 'EDA_report.html']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!ls"
+    "os.listdir()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +77,14 @@
     "    return df\n",
     "    \n",
     "def generate_eda_report(df):\n",
-    "    profile = ProfileReport(df, title=\"Pandas Profiling Report\")\n",
-    "    profile.to_file(\"EDA_report.html\")\n",
+    "    # generate EDA report (only if it doesen't exist)\n",
+    "    if os.path.exists('./EDA_report.html'):\n",
+    "        print(\"EDA report already in the folder.\")\n",
+    "    else:\n",
+    "        print(\"Generating EDA report...\")\n",
+    "        profile = ProfileReport(df, title=\"Pandas Profiling Report\")\n",
+    "        profile.to_file(\"EDA_report.html\")\n",
+    "        print(\"EDA report saved.\")\n",
     "\n",
     "def convert_dates(df,date_columns):\n",
     "    for col in date_columns:\n",
@@ -83,144 +98,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7df2b113eb0c4173be7813dc363e5c37",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Summarize dataset', max=33.0, style=ProgressStyle(descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3d19a78e134da5a04dadc30ef9d2b3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Generate report structure', max=1.0, style=ProgressStyle(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ebf7b434128407da94285867a10a5e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Render HTML', max=1.0, style=ProgressStyle(description_wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "288848e7d313485f80e426e7a48fab24",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Export report to file', max=1.0, style=ProgressStyle(desc…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "EDA report already in the folder.\n",
+      "Dataset interactions range from 2018-10-01 00:01:57 to 2018-12-03 01:11:16.\n"
      ]
     }
    ],
    "source": [
     "df = load_user_data()\n",
     "\n",
-    "# generate EDA report (only do it once)\n",
-    "#generate_eda_report(df)\n",
+    "generate_eda_report(df)\n",
     "\n",
     "convert_dates(df,date_columns=['ts','registration'])\n",
     "\n",
-    "date_min, date_max= get_dates_range(df)"
+    "date_min, date_max= get_dates_range(df)\n",
+    "print(f\"Dataset interactions range from {date_min} to {date_max}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "NextSong                     228108\n",
-       "Home                          14457\n",
        "Thumbs Up                     12551\n",
+       "Home                          10082\n",
        "Add to Playlist                6526\n",
        "Add Friend                     4277\n",
        "Roll Advert                    3933\n",
-       "Login                          3241\n",
        "Logout                         3226\n",
        "Thumbs Down                    2546\n",
        "Downgrade                      2055\n",
-       "Help                           1726\n",
        "Settings                       1514\n",
-       "About                           924\n",
+       "Help                           1454\n",
        "Upgrade                         499\n",
+       "About                           495\n",
        "Save Settings                   310\n",
-       "Error                           258\n",
+       "Error                           252\n",
        "Submit Upgrade                  159\n",
        "Submit Downgrade                 63\n",
        "Cancellation Confirmation        52\n",
        "Cancel                           52\n",
-       "Register                         18\n",
-       "Submit Registration               5\n",
        "Name: page, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,11 +165,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# 'page' based Feature Engineering ideas:\n",
+    "# Interaction based Feature Engineering ideas:\n",
     "* number of songs played (total/last week, month, 3 months )\n",
     "* number of thumbs Up,thumbs down total thumbs up/total songs played\n",
     "* number of friends added\n",
     "* number of songs added to a playlist\n",
+    "* days since registration\n",
+    "* days since last interaction\n",
+    "* dates between registration and last interaction\n",
     "\n",
     "# Target features:\n",
     "* Submit upgrade\n",
@@ -248,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +199,7 @@
        "Name: iteminsession, dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,177 +210,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Logged In     278102\n",
-       "Logged Out      8249\n",
-       "Guest             97\n",
-       "Cancelled         52\n",
-       "Name: auth, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['auth'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "226"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['userid'].value_counts().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "226"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# This should return 225.\n",
-    "df['userid'].value_counts().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 'userid': [('user_id','max')], if needed for a join\n",
     "\n",
-    "df2 = df.groupby('userid').agg(\n",
+    "users = df.groupby('userid').agg(\n",
     "    {'page': [('page_count', 'count')],\n",
     "     'length': [('avg_session_length','mean')], \n",
     "     'registration': [('registration','max')]\n",
     "    })\n",
     "\n",
-    "df2.columns = df2.columns.droplevel()"
+    "users.columns = users.columns.droplevel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>page_count</th>\n",
-       "      <th>avg_session_length</th>\n",
-       "      <th>registration</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>userid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>795</td>\n",
-       "      <td>247.944090</td>\n",
-       "      <td>2018-09-28 18:31:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>3214</td>\n",
-       "      <td>250.886598</td>\n",
-       "      <td>2018-09-26 17:17:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100001</th>\n",
-       "      <td>187</td>\n",
-       "      <td>263.712347</td>\n",
-       "      <td>2018-08-18 21:24:26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100002</th>\n",
-       "      <td>218</td>\n",
-       "      <td>254.153426</td>\n",
-       "      <td>2018-06-25 13:51:29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100003</th>\n",
-       "      <td>78</td>\n",
-       "      <td>241.302340</td>\n",
-       "      <td>2018-09-18 22:22:24</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        page_count  avg_session_length        registration\n",
-       "userid                                                    \n",
-       "10             795          247.944090 2018-09-28 18:31:35\n",
-       "100           3214          250.886598 2018-09-26 17:17:35\n",
-       "100001         187          263.712347 2018-08-18 21:24:26\n",
-       "100002         218          254.153426 2018-06-25 13:51:29\n",
-       "100003          78          241.302340 2018-09-18 22:22:24"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-589ecfb1b488>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-589ecfb1b488>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pseudo code: WIP\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "# Filter records with blank user id.\n",
+    "pseudo code: WIP\n",
     "\n",
-    "df2.head()"
+    "df.filter(latest_interaction-time_delta(7days,month,3months))\n",
+    "df.groupby(things from feature engineering section)"
    ]
   },
   {
@@ -456,13 +253,6 @@
     "# Load and Clean Dataset\n",
     "In this workspace, the mini-dataset file is `mini_sparkify_event_data.json`. Load and clean the dataset, checking for invalid or missing data - for example, records without userids or sessionids. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
